--- a/Windows-Chrome/style.css
+++ b/Windows-Chrome/style.css
@@ -96,6 +96,11 @@ body {
     color: #9c9898;
     font-size: 14px;
     font-family: "system";
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    overflow: hidden;
+    padding-right: 1rem;
 }
 
 #title-bar-width {
@@ -107,12 +112,17 @@ body {
     height: 100%;
     border: 1px solid gray;
     box-sizing: content-box;
-    z-index: -1;
+    user-select: none;
+    z-index: 0;
+}
+
+#content.dragging {
+    pointer-events: none;
 }
 
 #window {
     color: transparent;
-    background-color: transparent;
+    background-color: #fff;
     border-color: transparent;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     height: 759px; /* title bar height + content height */
@@ -122,8 +132,9 @@ body {
     display: flex;
     flex-direction: column;
     opacity: 0;
-    transition: 0.1s opacity;
+    transition: 0.2s opacity;
     pointer-events: none;
+    position: absolute;
 }
 
 #window.visible {
@@ -138,7 +149,7 @@ body {
 }
 
 #window .window__resizer-left {
-    z-index: 10;
+    z-index: 200;
     width: 10px;
     height: 100%;
     background: transparent;
@@ -149,7 +160,7 @@ body {
 }
 
 #window .window__resizer-right {
-    z-index: 10;
+    z-index: 200;
     width: 10px;
     height: 100%;
     background: transparent;
@@ -160,7 +171,7 @@ body {
 }
 
 #window .window__resizer-bottom {
-    z-index: 10;
+    z-index: 200;
     width: 100%;
     height: 10px;
     background: transparent;
@@ -171,27 +182,62 @@ body {
 }
 
 #window .window__resizer-bottomLeft {
-    z-index: 10;
+    z-index: 200;
     width: 10px;
     height: 10px;
     background: transparent;
-    z-index: 10;
+    z-index: 200;
     position: absolute;
     left: 0;
     bottom: 0;
-    cursor: se-resize;
+    cursor: ne-resize;
 }
 
 #window .window__resizer-bottomRight {
-    z-index: 10;
+    z-index: 200;
     width: 10px;
     height: 10px;
     background: transparent;
-    z-index: 10;
+    z-index: 200;
     position: absolute;
     right: 0;
     bottom: 0;
     cursor: nw-resize;
+}
+
+#window .window__resizer-top {
+    z-index: 200;
+    width: 100%;
+    height: 10px;
+    background: transparent;
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: n-resize;
+}
+
+#window .window__resizer-topLeft {
+    z-index: 200;
+    width: 10px;
+    height: 10px;
+    background: transparent;
+    z-index: 200;
+    position: absolute;
+    left: 0;
+    top: 0;
+    cursor: se-resize;
+}
+
+#window .window__resizer-topRight {
+    z-index: 200;
+    width: 10px;
+    height: 10px;
+    background: transparent;
+    z-index: 200;
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: ne-resize;
 }
 
 .clickme {
